--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -5,11 +5,14 @@
   </div>
 
   <div>
-    <%= form_with(model: [@notebook, @page, @paragraph]) do |form| %>
+    <%= form_with(model: [@notebook, @page, @paragraph], html: { class: 'float-left mr-1' }) do |form| %>
       <%= form.submit "Add Paragraph", class: 'btn btn-primary' %>
     <% end %>
-    <%= form_with(model: [@notebook, @page, @image_element]) do |form| %>
+    <%= form_with(model: [@notebook, @page, @image_element], html: { class: 'float-left mr-1' }) do |form| %>
       <%= form.submit "Add Image", class: 'btn btn-primary' %>
+    <% end %>
+    <%= form_with(model: [@notebook, @page, @checklist], html: { class: 'float-left' }) do |form| %>
+      <%= form.submit "Add Checklist", class: 'btn btn-primary' %>
     <% end %>
   </div>
 </h3>
@@ -52,6 +55,52 @@
         <% end %>
       <% end %>
     </div>
+  <% end %>
+
+  <% @page.checklists.each do |checklist| %>
+    <% if checklist.persisted? %>
+      <div class="text-content p-4 mb-2">
+        <h4><%= checklist.title %></h4>
+      </div>
+      <div class="form-content d-none p-4 mb-2">
+        <%= form_with(model: [@notebook, @page, checklist]) do |form| %>
+          <label>Checklist title</label>
+          <%= form.text_field :title, class: 'form-control' %>
+          <div class="buttons mt-3">
+            <%= form.submit "Save", class: 'btn btn-primary' %>
+            <a href="#" class='cancel btn btn-light'>Cancel</a>
+          </div>
+        <% end %>
+      </div>
+      <div class="checklist-item-form">
+        <%= form_with(model: [@notebook, @page, checklist, checklist.new_item]) do |form| %>
+          <h5><b>Add a new checklist item</b></h5>
+          <label>Title</label>
+          <%= form.text_field :title, class: 'form-control' %>
+          <div class="buttons mt-3">
+            <%= form.submit "Save", class: 'btn btn-primary' %>
+            <!-- <a href="#" class='cancel btn btn-light'>Cancel</a> -->
+          </div>
+        <% end %>
+      </div>
+      <div class="checklist-items">
+        <table class='table'>
+          <tr>
+            <th colspan='2'>Title</th>
+          </tr>
+          <% checklist.checklist_items.each do |checklist_item| %>
+            <% if checklist_item.persisted? %>
+              <tr>
+                <td><%= checklist_item.title %></td>
+                <td>
+                  <%= link_to 'Delete', notebook_page_checklist_checklist_item_path(@notebook, @page, checklist, checklist_item), method: :delete, data: { confirm: "Are you sure?" } %>
+                </td>
+              </tr>
+            <% end %>
+          <% end %>
+        </table>
+      </div>
+    <% end %>
   <% end %>
 
 </div>
