--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -18,89 +18,5 @@
 </h3>
 
 <div class="col-lg-10 offset-lg-1">
-  <% @page.paragraphs.each do |paragraph| %>
-    <% if paragraph.persisted? %>
-      <div class="text-content p-4 mb-2">
-        <% if paragraph.content.present? %>
-          <%= paragraph.content %>
-        <% else %>
-          <i>Click here to add text.</i>
-        <% end%>
-      </div>
-      <div class="form-content d-none p-4 mb-2">
-        <%= form_with(model: [@notebook, @page, paragraph]) do |form| %>
-          <%= form.rich_text_area :content %>
-          <div class="buttons mt-3">
-            <%= form.submit "Save", class: 'btn btn-primary' %>
-            <a href="#" class='cancel btn btn-light'>Cancel</a>
-          </div>
-        <% end %>
-      </div>
-    <% end %>
-  <% end %>
-
-  <% @page.image_elements.each do |image_element| %>
-    <div class="image-content p-4 mb-2">
-      <% if image_element.persisted? %>
-        <% if image_element.image.present? %>
-          <%= image_tag(image_element.image) %>
-        <% else %>
-          <%= form_with(model: [@notebook, @page, image_element]) do |form| %>
-            <%= form.file_field :image %>
-            <div class="buttons mt-3">
-              <%= form.submit "Save", class: 'btn btn-primary' %>
-              <!-- <a href="#" class='cancel btn btn-light'>Cancel</a> -->
-            </div>
-          <% end %>
-        <% end %>
-      <% end %>
-    </div>
-  <% end %>
-
-  <% @page.checklists.each do |checklist| %>
-    <% if checklist.persisted? %>
-      <div class="text-content p-4 mb-2">
-        <h4><%= checklist.title %></h4>
-      </div>
-      <div class="form-content d-none p-4 mb-2">
-        <%= form_with(model: [@notebook, @page, checklist]) do |form| %>
-          <label>Checklist title</label>
-          <%= form.text_field :title, class: 'form-control' %>
-          <div class="buttons mt-3">
-            <%= form.submit "Save", class: 'btn btn-primary' %>
-            <a href="#" class='cancel btn btn-light'>Cancel</a>
-          </div>
-        <% end %>
-      </div>
-      <div class="checklist-item-form">
-        <%= form_with(model: [@notebook, @page, checklist, checklist.new_item]) do |form| %>
-          <h5><b>Add a new checklist item</b></h5>
-          <label>Title</label>
-          <%= form.text_field :title, class: 'form-control' %>
-          <div class="buttons mt-3">
-            <%= form.submit "Save", class: 'btn btn-primary' %>
-            <!-- <a href="#" class='cancel btn btn-light'>Cancel</a> -->
-          </div>
-        <% end %>
-      </div>
-      <div class="checklist-items">
-        <table class='table'>
-          <tr>
-            <th colspan='2'>Title</th>
-          </tr>
-          <% checklist.checklist_items.each do |checklist_item| %>
-            <% if checklist_item.persisted? %>
-              <tr>
-                <td><%= checklist_item.title %></td>
-                <td>
-                  <%= link_to 'Delete', notebook_page_checklist_checklist_item_path(@notebook, @page, checklist, checklist_item), method: :delete, data: { confirm: "Are you sure?" } %>
-                </td>
-              </tr>
-            <% end %>
-          <% end %>
-        </table>
-      </div>
-    <% end %>
-  <% end %>
-
+  <%= render @page.elements %>
 </div>
